Refactor. Deprecated constructor removed and menu operates on list of menuitem.